# sc23

./: Procfile  device.json  main.py  n.py  pyproject.toml  real.json  real.txt  requirements.txt  sid.py  sid_set.py  vc.json  vc.txt
aminos/: api.py
vv/: ee.py  ff.py
